force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <description>Create the Candidate object in Recruitment app</description>
    <label>Candidate</label>
    <nameField>
        <displayFormat>C-{00}</displayFormat>
        <label>Candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>