force-app/main/default/objects/Candidate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>