force-app/main/default/objects/Candidate__c/fields/First__c.field-meta.xml
<CustomField>
    <fullName>First__c</fullName>
    <label>First</label>
    <length>20</length>
    <type>Text</type>
</CustomField>