force-app/main/default/objects/Candidate__c/validationRules/test.validationRule-meta.xml
<ValidationRule>
    <fullName>test</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( First__c) ||  First__c  &lt;&gt;  UPPER( First__c )</errorConditionFormula>
    <errorDisplayField>First__c</errorDisplayField>
    <errorMessage>Name should be Capital letters.</errorMessage>
</ValidationRule>